fix(choice-group): TEHVEER-296 - Move the vertical spacing from Check… (#7)
* fix(choice-group): TEHVEER-296 - Move the vertical spacing from Check and Radio to ChoiceGroup

* fix(choice-group): TEHVEER-296 - Move the vertical spacing from Check and Radio to ChoiceGroup

---------

--- a/packages/components/src/components/form/radio/radio.module.scss
+++ b/packages/components/src/components/form/radio/radio.module.scss
@@ -17,7 +17,7 @@
 
 .radio__indicator {
   position: relative;
-  display: inline-block;
+  display: block;
   min-width: 1.125rem;
   height: 1.125rem;
   margin-top: 0.125rem;
@@ -67,6 +67,7 @@
 }
 
 .radio__extra-content {
+  padding-top: 0.125rem;
   padding-bottom: 1rem;
   padding-left: 1.75rem;
 }
